--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "react-icons": "^4.8.0",
-    "react-router-dom": "^6.9.0"
+    "react-icons": "^4.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
