--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 PORT = 5000
 MONGODB_URL = mongodb://127.0.0.1:27017/shop
 
+MAIL_ID = siubroly99@gmail.com
+MP = oiebqrxhcaudejht
+
 JWT_SECRET = ngocson
